Fix with z-index for dropdown menus

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     position: absolute;
     top: 60px;
     right: 120px;
+    z-index: 10;
 }
 nav > ul > li > a  {
     width: 100%;
@@ -82,25 +83,24 @@ nav > ul > li > a:hover, .dropdown:hover > a {
     top: 10px;
     margin: 0 auto;
     width: 900px;
-    height: 105px;
-    border-style: solid;
+    height: 355px;
 }
 .column-1   {
+    display: inline;
     position: relative;
-    z-index: 10;
     width: 293px;
     height: 355px;
     float: right;
 }
 .column-2   {
+    padding-right: 10px;
     float: right;
-    z-index: 10;
     width: 293px;
     height: 355px;
 }
 .column-3   {
+    padding-right: 10px;
     float: right;
-    z-index: 10;
     width: 293px;
     height: 355px;
 }
